Included style.css and optimized code

--- a/index.html
+++ b/index.html
@@ -3,36 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>3D Red Cube FPS</title>
-    <style>
-      body {
-        margin: 0;
-        overflow: hidden;
-      }
-      canvas {
-        display: block;
-      }
-      /* Overlay for instructions with high z-index */
-      #blocker {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        z-index: 100;
-      }
-      #instructions {
-        font-family: Arial, sans-serif;
-        font-size: 24px;
-        color: #ffffff;
-        text-align: center;
-        cursor: pointer;
-      }
-    </style>
-    <!-- Import map to resolve bare module specifiers -->
+    <link rel="stylesheet" href="style.css" />
     <script type="importmap">
       {
         "imports": {
@@ -42,15 +13,12 @@
     </script>
   </head>
   <body>
-    <!-- Overlay that tells the user to click to start -->
     <div id="blocker">
       <div id="instructions">
         Click to play<br />
         (W, A, S, D to move, mouse to look around)
       </div>
     </div>
-
-    <!-- Load our main script as an ES module -->
     <script type="module" src="script.js"></script>
   </body>
 </html>
