--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <body>
     <div id="blocker">
       <div id="instructions">
-        Click to play<br />
-        (W, A, S, D to move, mouse to look around)
+        Click to play<br />(W, A, S, D to move, mouse to look around)
       </div>
     </div>
     <script type="module" src="script.js"></script>
