--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>3D Red Cube FPS</title>
+    <title>Demo</title>
     <link rel="stylesheet" href="style.css" />
     <script type="importmap">
       {
