--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <body>
     <div id="blocker">
       <div id="instructions">
-        Click to play<br />(W, A, S, D to move, mouse to look around)
+        Click to Play<br />
+        (W, A, S, D to move, Mouse to look, Space to jump)
       </div>
     </div>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
