--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Demo</title>
-  <link rel="stylesheet" href="style.css" />
-  <script type="importmap">
-  {
-    "imports": {
-      "three": "https://cdn.jsdelivr.net/npm/three@0.153.0/build/three.module.js"
-    }
-  }
-  </script>
-</head>
-<body>
-  <div id="blocker">
-    <div id="instructions">
-      Click to Play<br />
-      (W, A, S, D to move, Mouse to look, Space to jump)
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>3D Portfolio Demo</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div id="startOverlay">
+      <div class="overlayContent">
+        <h1>Click to Start</h1>
+        <p>Controls:</p>
+        <ul>
+          <li>W: Move forward</li>
+          <li>S: Move backward</li>
+          <li>A: Move left</li>
+          <li>D: Move right</li>
+          <li>Space: Move up</li>
+          <li>Shift: Move down</li>
+          <li>Mouse: Look around</li>
+          <li>Esc: Pause</li>
+        </ul>
+        <button id="startButton">Start</button>
+      </div>
     </div>
-  </div>
-  <script type="module" src="main.js"></script>
-</body>
+    <div id="pauseOverlay">
+      <div class="overlayContent">
+        <h1>Game Paused</h1>
+        <button id="resumeButton">Resume</button>
+      </div>
+    </div>
+    <div id="coordinates">Coordinates: (0, 0, 0)</div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/PointerLockControls.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/lights/RectAreaLightUniformsLib.js"></script>
+    <script src="config.js"></script>
+    <script src="lights.js"></script>
+    <script src="init.js"></script>
+    <script src="animate.js"></script>
+    <script src="events.js"></script>
+  </body>
 </html>
