--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>3D Portfolio Demo</title>
+    <title>Demo</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
