--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Demo</title>
+    <title>3D Portfolio Demo</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -15,8 +15,7 @@
           <li>S: Move backward</li>
           <li>A: Move left</li>
           <li>D: Move right</li>
-          <li>Space: Move up</li>
-          <li>Shift: Move down</li>
+          <li>Space: Jump</li>
           <li>Mouse: Look around</li>
           <li>Esc: Pause</li>
         </ul>
@@ -33,11 +32,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/PointerLockControls.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/OBJLoader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/lights/RectAreaLightUniformsLib.js"></script>
     <script src="config.js"></script>
     <script src="lights.js"></script>
     <script src="init.js"></script>
     <script src="animate.js"></script>
+      
     <script src="events.js"></script>
   </body>
 </html>
