--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>3D Portfolio Demo</title>
+    <title>Demo</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -29,6 +29,12 @@
       </div>
     </div>
     <div id="coordinates">Coordinates: (0, 0, 0)</div>
+    <div id="laptopPrompt"></div>
+
+    <button id="exitLaptopButton">Press T to stand up</button>
+
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/controls/PointerLockControls.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/loaders/GLTFLoader.js"></script>
@@ -36,8 +42,11 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/lights/RectAreaLightUniformsLib.js"></script>
     <script src="config.js"></script>
     <script src="lights.js"></script>
+    <script src="walls.js"></script>
+    <script type="module" src="animate.js"></script> 
     <script src="init.js"></script>
-    <script src="animate.js"></script>
+
+
       
     <script src="events.js"></script>
   </body>
